<resources>
    <string name="app_name">MFF Home Delivery Server</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_order">Orders</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_menu">Categories</string>
    <string name="menu_foodList">Food List</string>

    <string name="food_name">Name of the food</string>
    <string name="food_price">Rs. 100</string>
    <string name="desc">Description</string>
    <string name="food_category">Food Category</string>
    <string name="vegetarian">Vegetarian</string>

    <string name="home_second">Home Second</string>

    <string name="your_name">Enter your name</string>
    <string name="your_address">Enter your address</string>

    <string name="nav_user_name">User\'s Name</string>
    <string name="order_number">Order Number</string>
    <string name="order_date">Order Date</string>
    <string name="name_of_the_customer">Name of the customer</string>
    <string name="no_of_items">Number of items ordered</string>
    <string name="order_status">Order Status</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="placed">Placed</string>
    <string name="shipping">Shipping</string>
    <string name="shipped">Shipped</string>
    <string name="order_placed_0">Order Placed(0)</string>
    <string name="cancelled">Cancelled</string>
    <string name="status_placed">Status: Placed</string>
    <string name="update_order_status">Update Order Status</string>
    <string name="update_order">Update Order</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="restore_placed">Restore Placed</string>
    <string name="delete">Delete</string>
    <string name="food_quantity">Quantity: 1</string>

</resources>
