<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_title_d"
        android:text="@string/update_order"
        android:textSize="32sp"
        android:fontFamily="@font/brandon_medium"
        android:textColor="@android:color/black"
        />

    <TextView
        android:layout_below="@+id/txt_title_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_title_small_d"
        android:text="@string/update_order_status"
        android:textSize="22sp"
        android:fontFamily="@font/brandon_medium"
        android:textColor="@android:color/darker_gray"
        />

    <TextView
        android:layout_below="@+id/txt_title_small_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_status_d"
        android:text="@string/status_placed"
        android:textSize="22sp"
        android:fontFamily="@font/brandon_medium"
        android:textColor="@android:color/darker_gray" />

    <RadioGroup
        android:id="@+id/rdi_group_shipped"
        android:layout_below="@+id/txt_status_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RadioButton
            android:id="@+id/rdi_shipped_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/shipped"
            android:fontFamily="@font/brandon_medium"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/rdi_cancelled_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/cancelled"
            android:fontFamily="@font/brandon_medium"
            android:textSize="22sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_button_d"
        android:layout_below="@+id/rdi_group_shipped"
        android:gravity="right"
        android:orientation="horizontal"
        >

        <Button
            android:padding="8dp"
            android:id="@+id/btn_cancel_d"
            android:text="@string/cancel"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/darker_gray"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:padding="8dp"
            android:id="@+id/btn_ok_d"
            android:text="@string/ok"
            android:textColor="@android:color/holo_red_dark"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
</RelativeLayout>