<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu">

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.mffhomedeliveryserver.ui.categories.CategoriesFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_catgeories">
    </fragment>

    <fragment
        android:id="@+id/nav_foodList"
        android:name="com.example.mffhomedeliveryserver.ui.foodlist.FoodListFragment"
        android:label="@string/menu_foodList"
        tools:layout="@layout/fragment_food_list" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.mffhomedeliveryserver.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" >

        <action android:id="@+id/clearBackstack"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_menu"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>