<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_best_deals_food_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_best_deals_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/food_name"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        android:fontFamily="@font/brandon_medium"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_best_deals_food_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_best_deals_food_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/food_price"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/brandon_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switch_available"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="136dp" />

    <TextView
        android:id="@+id/txt_food_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/food_category"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        android:fontFamily="@font/brandon_medium"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_best_deals_food_image"
        app:layout_constraintTop_toBottomOf="@+id/txt_best_deals_food_name" />

    <TextView
        android:id="@+id/vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:fontFamily="@font/brandon_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_best_deals_food_image"
        app:layout_constraintTop_toBottomOf="@+id/txt_food_category"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/switch_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>