<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">
    
    <LinearLayout
        android:id="@+id/placed_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:focusable="true">

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:tint="#737373"
            app:srcCompat="@drawable/ic_speaker_notes_black_24dp"
            android:layout_marginEnd="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/placed"
            android:textColor="#737373"
            android:textSize="16sp"/>
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/shipping_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:focusable="true">

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:tint="#737373"
            app:srcCompat="@drawable/ic_local_shipping_black_24dp"
            android:layout_marginEnd="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/shipping"
            android:textColor="#737373"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/shipped_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:focusable="true">

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:tint="#737373"
            app:srcCompat="@drawable/ic_done_black_24dp"
            android:background="@android:color/transparent"
            android:layout_marginEnd="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/shipped"
            android:textColor="#737373"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/cancelled_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:focusable="true">

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:tint="#737373"
            app:srcCompat="@drawable/ic_clear_black_24dp"
            android:background="@android:color/transparent"
            android:layout_marginEnd="32dp"
            tools:ignore="PrivateResource" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/cancelled"
            android:textColor="#737373"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>